--- a/web/bundles/muzichcore/css/old.css
+++ b/web/bundles/muzichcore/css/old.css
@@ -1009,11 +1009,11 @@ position: absolute;
   text-decoration: none;
 }*/
 
-div.display_more_elements
+/*div.display_more_elements
 {
   background-color: #D9F7FF;
   text-align: center;
-}
+}*/
 
 /*input#element_add_url
 {
