--- a/src/Muzich/CoreBundle/Resources/views/SearchElement/default.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/SearchElement/default.html.twig
@@ -1,3 +1,16 @@
+{% if display_new_elements is not defined %}
+  {% set display_new_elements = false %}
+{% endif %}
+
+{% if display_new_elements %}
+  <div class="display_more_elements" style="display: none;">
+    <span></span>
+  </div>
+{% endif %}
+
+<div class="elements_loader_div">
+  <img class="elements_new_loader" style="display: none;" src="{{ asset('/bundles/muzichcore/img/ajax-loader.gif') }}" alt="loading" />
+</div>
 
 {% if elements|length %}
   {% if not app.request.isXmlHttpRequest %}<ul class="elements">{% endif %}
@@ -47,3 +60,7 @@
   </div>
 
 {% endif %}
+
+<div class="elements_loader_div">
+  <img class="elements_more_loader" style="display: none;" src="{{ asset('/bundles/muzichcore/img/ajax-loader.gif') }}" alt="loading" />
+</div>
