--- a/src/Muzich/CoreBundle/Resources/views/SearchElement/more_button.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/SearchElement/more_button.html.twig
@@ -1,19 +1,18 @@
-<div class="elements_loader_div">
-  <img class="elements_more_loader" style="display: none;" src="{{ asset('/bundles/muzichcore/img/ajax-loader.gif') }}" alt="loading" />
-</div>
-
-{% if more_path_params is not defined %}
-  {% set more_path_params = {} %}
-{% endif %}
-
 {% if link_class is not defined %}
   {% set link_class = '' %}
 {% endif %}
-
-{% if display_more_button and elements_length %} 
-  <a href="{{ path(more_path, more_path_params) }}" class="elements_more {{ link_class }}">
-    <div>
-      {{ 'more'|trans({}, 'userui') }}
-    </div>
-  </a>
+{% if more_url_path is not defined %}
+  {% set more_url_path = '' %}
 {% endif %}
+
+{% if more_url_path %}
+  <input type="hidden" id="more_elements_url" value="{{ more_url_path }}" />
+{% endif %}
+<a
+  href="{{ more_path }}"
+  class="elements_more {{ link_class }}"
+>
+  <div>
+    {{ 'more'|trans({}, 'userui') }}
+  </div>
+</a>
