--- a/src/Muzich/FavoriteBundle/Resources/views/Favorite/userList.html.twig
+++ b/src/Muzich/FavoriteBundle/Resources/views/Favorite/userList.html.twig
@@ -21,30 +21,29 @@
       'user_id' : viewed_user.id
     } %}
     
-    <a href="{{ path('elements_get_filter_data_autoplay_favorite', {
-          'show_type'  : 'user',
-          'show_id'    : viewed_user.id, 
-          'data'       : '[]'
-        }) }}" class="button" id="autoplay_launch" 
-       title="{{ 'elements.autoplay.launch'|trans({}, 'elements') }}" >
-      <img src="{{ asset('/bundles/muzichcore/img/1353494305_player_play.png') }}" alt="" />
-    </a>
+    {% include 'MuzichCoreBundle:Component:element_autoplay_button.html.twig' with {
+      'autoplay_path' : path('elements_get_filter_data_autoplay_favorite', {
+        'show_type'  : 'user',
+        'show_id'    : viewed_user.id, 
+        'data'       : '[]'
+      })
+    } %}
     
   </div>
 
   {% include "MuzichCoreBundle:SearchElement:default.html.twig" %}
     
-  <div class="elements_loader_div">
-    <img class="elements_more_loader" style="display: none;" src="{{ asset('/bundles/muzichcore/img/ajax-loader.gif') }}" alt="loading" />
-  </div>
-  
   {% if elements|length %}
-    <input type="hidden" id="more_elements_url" value="{{ path('favorite_get', {'user_id': viewed_user.id, 'tags_ids_json' : ''}) }}" />
-    <a href="{{ path('favorite_get', {'user_id': viewed_user.id, 'tags_ids_json' : '[]'}) }}" class="elements_more">
-      <div>
-       {{ 'more'|trans({}, 'userui') }}
-     </div>
-    </a>
+    {% include "MuzichCoreBundle:SearchElement:more_button.html.twig" with {
+      'more_path'     : path('favorite_get', {
+        'user_id': viewed_user.id,
+        'tags_ids_json' : ''
+      }),
+      'more_url_path' : path('favorite_get', {
+        'user_id': viewed_user.id,
+        'tags_ids_json' : ''
+      })
+    }%}
   {% endif %}
   
   <input type="hidden" id="autoplay_url" value="{{ path('elements_get_filter_data_autoplay_favorite', {
