--- a/src/Muzich/HomeBundle/Resources/views/Home/index.html.twig
+++ b/src/Muzich/HomeBundle/Resources/views/Home/index.html.twig
@@ -5,123 +5,61 @@
 
 {% block content %}
 
-  <a href="#" id="element_add_link" class="button gradient">
-    {{ 'home.add_element'|trans({}, 'navigationui') }}
-    <img src="{{ asset('/img/icon_dart_right_white.png') }}" alt="" />
-  </a>
-  <a href="#" id="element_add_close_link" class="button gradient" style="display: none;">
-    {{ 'home.add_element_box.close'|trans({}, 'navigationui') }}
-    <img src="{{ asset('/img/icon_dart_left_white.png') }}" alt="" />
-  </a>
-
-  <ul id="tabs_tag_search_buttons">
-    <li id="tab_li_tag_search_no_tags" class="{% if search_tags_id|length == 0 %}selected{% endif %} gradient">
-      <a id="tabs_tag_search_no_tags" href="#" >
-        <img src="{{ asset('/img/icon_close.png') }}" alt="nofilters" />
-        {{ 'filter.clear'|trans({}, 'userui') }}
-      </a>
-      <div class="dart"></div>
-    </li>
-    <li id="tab_li_tag_search_with_tags" class="{% if search_tags_id|length %}selected{% endif %} gradient">
-      <a id="tabs_tag_search_with_tags" href="#" >
-        <img src="{{ asset('/img/icon_minilogo_2.png') }}" alt="nofilters" />
-        {{ 'filter.mytags'|trans({}, 'userui') }}
-      </a>
-      <div class="dart"></div>
-    </li>
-  </ul>
-
-  <input type="hidden" class="filter_clear_url" value="{{ path('filter_clear') }}" />
-  <input type="hidden" class="filter_mytags_url" value="{{ path('filter_mytags') }}" />
-
-  <div id="element_add_box" style="display: none;">    
-
-    <h2>{{ 'home.add_element_box.title'|trans({}, 'navigationui') }}</h2>
+  {% include 'MuzichCoreBundle:Component:element_add_buttons.html.twig' %}
+  {% include 'MuzichHomeBundle:Component:filter_menu.html.twig' %}
   
-    <form novalidate name="{{ add_form_name }}" 
-      {% if  app.environment != 'test' %}
-        action="{{ path('element_retrieve_api_datas') }}" method="post" {{ form_enctype(add_form) }}
-      {% else %}
-        action="{{ path('element_add') }}" method="post" {{ form_enctype(add_form) }}
-      {% endif %}
-    >
+  {% include 'MuzichCoreBundle:Component:element_add_box.html.twig' with {
+    'box_title': 'home.add_element_box.title'|trans({}, 'navigationui')
+  } %}
 
-      {% include "MuzichCoreBundle:Element:form.add.html.twig" with { 
-        'form'          : add_form, 
-        'form_name'     : add_form_name
-      } %}
-
-    {% if from_url is defined %}
-    {% if from_url %}
-      <script type="text/javascript">
-        $(document).ready(function(){
-          $('#element_add_box').slideDown("slow");
-          $('#element_add_link').hide();
-          $('form[name="search"]').slideUp();
-          $('img#form_add_loader').show();
-          $('input#element_add_url').val("{{ from_url }}");
-          $('form[name="add"]').submit();
-        });
-      </script>
-    {% endif %}
-    {% endif %}
-
-    </form>
-  </div>
-
-  <div id="added_element_to_group" style="display: none;">
-    <img class="loader" style="display: none;" src="{{ asset('/bundles/muzichcore/img/ajax-loader.gif') }}" alt="loading" />
-    <p class="help">
-      {{ 'element_add.added_to_group.sentence'|trans({}, 'userui') }}
-    </p>
-    <ul id="groups_to_add_element"></ul>
-    <p class="cancel">
-      <a href="" class="cancel">
-        {{ 'element_add.added_to_group.nothanks'|trans({}, 'userui') }}
-      </a>
-    </p>
-  </div>
+  {# TODO: Cette partie de javascript ne devra plus exister après la réecriture du code javascript #}
+  {% if from_url is defined %}
+  {% if from_url %}
+    <script type="text/javascript">
+      $(document).ready(function(){
+        $('#element_add_box').slideDown("slow");
+        $('#element_add_link').hide();
+        $('form[name="search"]').slideUp();
+        $('img#form_add_loader').show();
+        $('input#element_add_url').val("{{ from_url }}");
+        $('form[name="add"]').submit();
+      });
+    </script>
+  {% endif %}
+  {% endif %}
 
   <div class="top_tools" {% if search_tags_id|length == 0 %}style="display: none;"{% endif %}>
   
     <div class="search_tools">
       <form name="{{ search_form_name }}" action="{{ path('search_elements') }}" method="post" {{ form_enctype(search_form) }}>
-  
+        
         {% include "MuzichCoreBundle:SearchElement:form.html.twig" with { 
           'form_name'               : search_form_name,
           'search_tags'             : search_tags_id
         } %}
-  
+        
         <input class="main button" type="submit" value="{{ 'filter.submit'|trans({}, 'userui') }}"/>
-  
+        
       </form>
     </div>
 
-    <a href="{{ path('elements_get_filter_data_autoplay', {
-      'type' : 'filter'
-    }) }}" class="button" id="autoplay_launch" 
-       title="{{ 'elements.autoplay.launch'|trans({}, 'elements') }}" >
-      <img src="{{ asset('/bundles/muzichcore/img/1353494305_player_play.png') }}" alt="" />
-    </a>
+    {% include 'MuzichCoreBundle:Component:element_autoplay_button.html.twig' with {
+      'autoplay_path' : path('elements_get_filter_data_autoplay', {
+        'type' : 'filter'
+      })
+    } %}
   
   </div>
 
-  <div class="display_more_elements" style="display: none;">
-    <span></span>
-  </div>
-
-  <div class="elements_loader_div">
-    <img class="elements_new_loader" style="display: none;" src="{{ asset('/bundles/muzichcore/img/ajax-loader.gif') }}" alt="loading" />
-  </div>
-
   {% include "MuzichCoreBundle:SearchElement:default.html.twig" with {
-    'noelements_filter' : true 
+    'noelements_filter'    : true,
+    'display_new_elements' : true
   }%}
-    
-  {% include "MuzichCoreBundle:SearchElement:more_button.html.twig" with {
-    'display_more_button' : true,
-    'elements_length'     : elements|length,
-    'more_path'           : 'search_elements'
-  }%}
+  
+  {% if elements|length %}
+    {% include "MuzichCoreBundle:SearchElement:more_button.html.twig" with {
+      'more_path'           : path('search_elements')
+    }%}
+  {% endif %}
   
 {% endblock %}
