--- a/src/Muzich/HomeBundle/Resources/views/Home/need_tags.html.twig
+++ b/src/Muzich/HomeBundle/Resources/views/Home/need_tags.html.twig
@@ -10,25 +10,18 @@
     <p>{{ 'need_tags.text_help'|trans({}, 'userui') }}</p>
   </div>
   
-  <div class="display_more_elements" style="display: none;">
-    <span></span>
-  </div>
-
-  <div class="elements_loader_div">
-    <img class="elements_new_loader" style="display: none;" src="{{ asset('/bundles/muzichcore/img/ajax-loader.gif') }}" alt="loading" />
-  </div>
-
-  {% include "MuzichCoreBundle:SearchElement:default.html.twig" %}
-    
-  {% include "MuzichCoreBundle:SearchElement:more_button.html.twig" with {
-    'display_more_button' : true,
-    'elements_length'     : elements|length,
-    'more_path'           : 'search_elements_more',
-    'more_path_params'    : {
-      'session_id' : app.user.getPersonalHash('needstagpage'),
-      'id_limit'   : last_element_id
-    },
-    'link_class'          : 'event_view'
-  }%}
+  {% include "MuzichCoreBundle:SearchElement:default.html.twig" with {
+    'display_new_elements' : true
+  } %}
+  
+  {% if elements|length %}
+    {% include "MuzichCoreBundle:SearchElement:more_button.html.twig" with {
+      'more_path'     : path('search_elements_more', {
+        'session_id' : app.user.getPersonalHash('needstagpage'),
+        'id_limit'   : last_element_id
+      }),
+      'link_class'          : 'event_view'
+    }%}
+  {% endif %}
   
 {% endblock %}
