--- a/src/Muzich/HomeBundle/Resources/views/Show/showGroup.html.twig
+++ b/src/Muzich/HomeBundle/Resources/views/Show/showGroup.html.twig
@@ -7,18 +7,8 @@
 
   <div class="top_tools">
     
-    
     {% if his_group or group.open %}
-    
-      <a href="#" id="element_add_link" class="button gradient justtopright">
-        {{ 'home.add_element'|trans({}, 'navigationui') }}
-        <img src="{{ asset('/img/icon_dart_right_white.png') }}" alt="" />
-      </a>
-      <a href="#" id="element_add_close_link" class="button gradient justtopright" style="display: none;">
-        {{ 'home.add_element_box.close'|trans({}, 'navigationui') }}
-        <img src="{{ asset('/img/icon_dart_left_white.png') }}" alt="" />
-      </a>
-    
+      {% include 'MuzichCoreBundle:Component:element_add_buttons_topright.html.twig' %}
     {% endif %}
 
     <div class="show_options">
@@ -42,18 +32,11 @@
       
     <h1>{{ group.name }}</h1>
     
-    
     {% if his_group or group.open %}
-      <div id="element_add_box" style="display: none;">
-    
-        <input type="hidden" id="add_element_group_page" value="{{ group.slug }}" />
-        <form novalidate name="{{ add_form_name }}" action="{{ path('element_add', {'group_slug' : group.slug}) }}" method="post" {{ form_enctype(add_form) }}>
-  
-          {% include "MuzichCoreBundle:Element:form.add.html.twig" with { 'form': add_form, 'form_name': add_form_name } %}
-  
-        </form>
-        
-      </div>
+      {% include 'MuzichCoreBundle:Component:element_add_box.html.twig' with {
+        'group_slug'        : group.slug,
+        'show_add_to_group' : false
+      } %}
     {% endif %}
     
     <p class="show_info">
@@ -85,40 +68,33 @@
       'object_type' : 'group'
     } %}
     
-    <a href="{{ path('elements_get_filter_data_autoplay_show', {
-          'show_type'  : 'group',
-          'show_id'    : group.id, 
-          'data'       : '[]'
-        }) }}" class="button" id="autoplay_launch" 
-       title="{{ 'elements.autoplay.launch'|trans({}, 'elements') }}" >
-      <img src="{{ asset('/bundles/muzichcore/img/1353494305_player_play.png') }}" alt="" />
-    </a>
+    {% include 'MuzichCoreBundle:Component:element_autoplay_button.html.twig' with {
+      'autoplay_path' : path('elements_get_filter_data_autoplay_show', {
+        'show_type'  : 'group',
+        'show_id'    : group.id, 
+        'data'       : '[]'
+      })
+    } %}
     
   </div>
   
   {% include "MuzichCoreBundle:SearchElement:default.html.twig" with {'no_group_name' : true} %}
-    
-  <div class="elements_loader_div">
-    <img class="elements_more_loader" style="display: none;" src="{{ asset('/bundles/muzichcore/img/ajax-loader.gif') }}" alt="loading" />
-  </div>
-    
+  
   {% if more_count is defined %} 
-  {% if elements|length %}
-     <input type="hidden" id="more_elements_url" value="{{ path('show_elements_get', {
-        'type'          : 'group',
-        'object_id'     : group.id, 
-        'tags_ids_json' : ''
-      }) }}" />
-     <a href="{{ path('show_elements_get', {
-        'type'          : 'group',
-        'object_id'     : group.id, 
-        'tags_ids_json' : '[]'
-      }) }}" class="elements_more" >
-       <div>
-        {{ 'more'|trans({}, 'userui') }}
-      </div>
-     </a>
-  {% endif %}
+    {% if elements|length %}
+      {% include "MuzichCoreBundle:SearchElement:more_button.html.twig" with {
+        'more_path'     : path('show_elements_get', {
+          'type'          : 'group',
+          'object_id'     : group.id, 
+          'tags_ids_json' : '[]'
+        }),
+        'more_url_path' : path('show_elements_get', {
+          'type'          : 'group',
+          'object_id'     : group.id, 
+          'tags_ids_json' : ''
+        })
+      }%}
+    {% endif %}
   {% endif %}
   
   <input type="hidden" id="autoplay_url" value="{{ path('elements_get_filter_data_autoplay_show', {
