--- a/src/Muzich/HomeBundle/Resources/views/Show/showUser.html.twig
+++ b/src/Muzich/HomeBundle/Resources/views/Show/showUser.html.twig
@@ -8,14 +8,7 @@
   <div class="top_tools">
     
     {% if app.user.id == viewed_user.id %}
-      <a href="#" id="element_add_link" class="button gradient justtopright">
-        {{ 'home.add_element'|trans({}, 'navigationui') }}
-        <img src="{{ asset('/img/icon_dart_right_white.png') }}" alt="" />
-      </a>
-      <a href="#" id="element_add_close_link" class="button gradient justtopright" style="display: none;">
-        {{ 'home.add_element_box.close'|trans({}, 'navigationui') }}
-        <img src="{{ asset('/img/icon_dart_left_white.png') }}" alt="" />
-      </a>
+      {% include 'MuzichCoreBundle:Component:element_add_buttons_topright.html.twig' %}
     {% endif %}
     
     <div class="show_options">
@@ -40,24 +33,7 @@
     <h1>{{ 'user.show.title'|trans({'%name%' : viewed_user.name}, 'users') }}</h1>
   
     {% if app.user.id == viewed_user.id %}
-      <div id="element_add_box" style="display: none;">    
-      
-        <form novalidate name="{{ add_form_name }}" 
-          {% if  app.environment != 'test' %}
-            action="{{ path('element_retrieve_api_datas') }}" method="post" {{ form_enctype(add_form) }}
-          {% else %}
-            action="{{ path('element_add') }}" method="post" {{ form_enctype(add_form) }}
-          {% endif %}    
-        method="post" {{ form_enctype(add_form) }}>
-  
-          {% include "MuzichCoreBundle:Element:form.add.html.twig" with { 
-            'form'          : add_form, 
-            'form_name'     : add_form_name
-          } %}
-      
-        </form>
-      </div>
-  
+      {% include 'MuzichCoreBundle:Component:element_add_box.html.twig'  %}
     {% endif %}
     
     <div class="reputation">
@@ -91,43 +67,33 @@
       'object_type' : 'user'
     } %}
     
-    <a href="{{ path('elements_get_filter_data_autoplay_show', {
-          'show_type'  : 'user',
-          'show_id'    : viewed_user.id, 
-          'data'       : '[]'
-        }) }}" class="button" id="autoplay_launch" 
-       title="{{ 'elements.autoplay.launch'|trans({}, 'elements') }}" >
-      <img src="{{ asset('/bundles/muzichcore/img/1353494305_player_play.png') }}" alt="" />
-    </a>
+    {% include 'MuzichCoreBundle:Component:element_autoplay_button.html.twig' with {
+      'autoplay_path' : path('elements_get_filter_data_autoplay_show', {
+        'show_type'  : 'user',
+        'show_id'    : viewed_user.id, 
+        'data'       : '[]'
+      }) 
+    } %}
   
   </div>
-  
   
   {% include "MuzichCoreBundle:SearchElement:default.html.twig" %}
   
-  <div class="elements_loader_div">
-    <img class="elements_more_loader" style="display: none;" src="{{ asset('/bundles/muzichcore/img/ajax-loader.gif') }}" alt="loading" />
-  </div>
-  
   {% if more_count is defined %} 
-  {% if elements|length %}
-    
-    <input type="hidden" id="more_elements_url" value="{{ path('show_elements_get', {
-        'type'          : 'user',
-        'object_id'     : viewed_user.id, 
-        'tags_ids_json' : ''
-      }) }}" />
-    <a href="{{ path('show_elements_get', {
-        'type'          : 'user',
-        'object_id'     : viewed_user.id, 
-        'tags_ids_json' : '[]'
-      }) }}" class="elements_more" >
-      <div>
-        {{ 'more'|trans({}, 'userui') }}
-      </div>
-    </a>
-   
-  {% endif %}
+    {% if elements|length %}
+      {% include "MuzichCoreBundle:SearchElement:more_button.html.twig" with {
+        'more_path'     : path('show_elements_get', {
+          'type'          : 'user',
+          'object_id'     : viewed_user.id, 
+          'tags_ids_json' : '[]'
+        }),
+        'more_url_path' : path('show_elements_get', {
+          'type'          : 'user',
+          'object_id'     : viewed_user.id, 
+          'tags_ids_json' : ''
+        })
+      }%}
+    {% endif %}
   {% endif %}
     
   <input type="hidden" id="autoplay_url" value="{{ path('elements_get_filter_data_autoplay_show', {
