--- a/src/Muzich/UserBundle/Resources/views/Event/elements.html.twig
+++ b/src/Muzich/UserBundle/Resources/views/Event/elements.html.twig
@@ -49,23 +49,18 @@
     
   </div>
 
-  <div class="elements_loader_div">
-    <img class="elements_new_loader" style="display: none;" src="{{ asset('/bundles/muzichcore/img/ajax-loader.gif') }}" alt="loading" />
-  </div>
-
   {% include "MuzichCoreBundle:SearchElement:default.html.twig" with {
     'noelements_filter' : true 
   }%}
     
-  {% include "MuzichCoreBundle:SearchElement:more_button.html.twig" with {
-    'display_more_button' : true,
-    'elements_length'     : elements|length,
-    'more_path'           : 'search_elements_more',
-    'more_path_params'    : {
-      'session_id' : app.user.getPersonalHash(app.request.get('event_id')),
-      'id_limit'   : last_element_id
-    },
-    'link_class'          : 'event_view'
-  }%}
+  {% if elements|length %}
+    {% include "MuzichCoreBundle:SearchElement:more_button.html.twig" with {
+      'more_path'     : path('search_elements_more', {
+        'session_id' : app.user.getPersonalHash(app.request.get('event_id')),
+        'id_limit'   : last_element_id
+      }),
+      'link_class'          : 'event_view'
+    }%}
+  {% endif %}
   
 {% endblock %}
