--- a/src/Muzich/CoreBundle/Resources/views/Layout/head_js.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Layout/head_js.html.twig
@@ -1,31 +1,19 @@
+{% javascripts
+  'js/jquery-1.8.2.prod.js'
+  'js/jquery-ui-1.8.7.min.js'
+  'js/swfobject.js'
+  'js/soundcloud/api.js'
+  'js/soundcloud/sdk.js'
+  'jplayer/js/jquery.jplayer.min.js'
+  'jplayer/js/jplayer.playlist.min.js'
+  'js/jquery.form-2.14.js'
+  'js/jConfirmAction/jconfirmaction.jquery.js'
+  '@MuzichCoreBundle/Resources/public/js/TagPrompt.js'
+  '@MuzichCoreBundle/Resources/public/js/autoplay.js'
+  '@MuzichCoreBundle/Resources/public/js/muzich.js' %}{# filter='yui_js' %}#}
+  <script src="{{ asset_url }}"></script>
+{% endjavascripts %}
 
-{% if  app.environment != 'prod' %}  
-  <script src="{{ asset('js/jquery-1.8.2.dev.js') }}" type="text/javascript"></script>
-{% else %}
-  <script src="{{ asset('js/jquery-1.8.2.prod.js') }}" type="text/javascript"></script>
-{% endif %}
-
-<script src="{{ asset('js/jquery-ui-1.8.7.min.js') }}" type="text/javascript"></script>
-<script src="{{ asset('js/lib/muzich.js') }}" type="text/javascript"></script>
-<script src="{{ asset('js/lib/TagPrompt.js') }}" type="text/javascript"></script>
-
-<script type="text/javascript" src="{{ asset('js/swfobject.js') }}"></script> 
-
-<script src="http://connect.soundcloud.com/sdk.js"></script>
-<script src="http://w.soundcloud.com/player/api.js"></script>
-
-<script src="{{ asset('js/lib/autoplay.js') }}" type="text/javascript"></script>
-
-{# jPlayer #}
-<link href="{{ asset('jplayer/skin/blue.monday/jplayer.blue.monday.css') }}" rel="stylesheet" type="text/css" />
-<script type="text/javascript" src="{{ asset('jplayer/js/jquery.jplayer.min.js') }}"></script>
-<script type="text/javascript" src="{{ asset('jplayer/js/jplayer.playlist.min.js') }}"></script>
-
-<script src="{{ asset('js/tags/jquery.autoGrowInput.js') }}" type="text/javascript"></script>
-<script src="{{ asset('js/tags/jquery.tagBox.js') }}" type="text/javascript"></script>
-<script src="{{ asset('js/formdefault/jquery.formdefaults.js') }}" type="text/javascript"></script>
-<script src="{{ asset('js/jquery.form-2.14.js') }}" type="text/javascript"></script>
-<script src="{{ asset('js/jConfirmAction/jconfirmaction.jquery.js') }}" type="text/javascript"></script>
 <script type="text/javascript">
   string_follow_stop = "{{ 'user.stop_follow'|trans({}, 'users') }}";
   string_follow_following = "{{ 'user.following'|trans({}, 'users') }}";
