Ajout de la gestion de la lecture soundcloud et js pour play2.

--- a/src/Muzich/CoreBundle/Resources/views/SearchElement/li.element.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/SearchElement/li.element.html.twig
@@ -5,7 +5,7 @@
   class="element {{ class_color }}"
   id="element_{{ element.id }}"
   data-type="{{ element.type }}"
-  data-refid="{{ element.refId }}"
+  data-refid="{{ element.refId(true) }}"
   data-elementid="{{ element.id }}"
 >
   
