Finalisation de la récupération de la fin de lecture de playlist pour le lecteur streaming générique. Deplacement des objets players dans des fichiers independants.

--- a/src/Muzich/CoreBundle/Resources/views/Layout/head_js.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Layout/head_js.html.twig
@@ -11,6 +11,7 @@
   '@MuzichCoreBundle/Resources/public/js/TagPrompt.js'
   '@MuzichCoreBundle/Resources/public/js/play.js'
   '@MuzichCoreBundle/Resources/public/js/play2.js'
+  '@MuzichCoreBundle/Resources/public/js/player/*'
   '@MuzichCoreBundle/Resources/public/js/muzich.js' %}{# filter='yui_js' %}#}
   <script src="{{ asset_url }}"></script>
 {% endjavascripts %}
