--- a/src/Muzich/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/layout.html.twig
@@ -15,9 +15,9 @@
   
     <div id="main_content">
       
-      <header id="header">
+      <div id="header">
         {% include 'MuzichCoreBundle:Layout:header.html.twig' %}
-      </header>
+      </div>
       
       {% include 'MuzichCoreBundle:Layout:flash_messages.html.twig' %}
       
