Evolution #567: Pouvoir exclure des partages de son groupe
Fonctionnalité codé et testé.

--- a/src/Muzich/CoreBundle/Resources/views/Layout/head_js.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Layout/head_js.html.twig
@@ -56,6 +56,9 @@
   {% autoescape false %}
   string_search_tag_title = "{{ 'search_tag.title'|trans({}, 'userui') }}";
   {% endautoescape %}
+  string_removefromgroup_sentence = "{{ 'element.group.remove_from.confirm.title'|trans({}, 'elements') }}";
+  string_removefromgroup_confirm_yes = "{{ 'element.group.remove_from.confirm.yes'|trans({}, 'elements') }}";
+  string_removefromgroup_confirm_no = "{{ 'element.group.remove_from.confirm.no'|trans({}, 'elements') }}";
 
   url_index = "{{ path('index') }}";
   url_search_tag = "{{ path('search_tag') }}";
