--- a/src/Muzich/CoreBundle/Resources/views/SearchElement/element.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/SearchElement/element.html.twig
@@ -7,6 +7,9 @@
 {% if display_comments is not defined %}
   {% set display_comments = true %}
 {% endif %}
+{% if his_group is not defined %}
+  {% set his_group = false %}
+{% endif %}
 
 <table>
   <tr>
@@ -152,6 +155,19 @@
 
         {% endif %}
         
+        {% if his_group %}
+          <li class="remove_from_group">
+            <a title="{{ 'element.group.remove_from.title'|trans({'%group_name%':group.name}, 'elements') }}"
+              class="element_remove_from_group_link"
+              href="{{ path('element_remove_from_group', {
+                 'element_id' : element.id,
+                 'group_id'   : group.id,
+                 'token'      : app.user.getPersonalHash('remove_from_group_'~element.id)
+              })  }}">
+              <img src="{{ asset('/img/1360779431_Remove_gray.png') }}" alt="remove from group" />
+            </a>
+          </li>
+        {% endif %}
       </ul>
       
       <span class="element_name">
