Evolution #577: Affichages score: gestion espaces pour milliers, etc

--- a/src/Muzich/CoreBundle/Resources/views/SearchElement/element.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/SearchElement/element.html.twig
@@ -47,7 +47,7 @@
       
       <ul class="element_thumb_actions">
         <li class="score">
-          {{ element.points }}
+          {{ element.points|format_score }}
         </li>
           {% if element.owner.id != app.user.id %}
             <li class="vote thumb">
