Evolution #590: Mail pour news
Fonction codé !! test non codés

--- a/src/Muzich/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/layout.html.twig
@@ -33,7 +33,9 @@
         </div>
           
         <aside id="sidebar">
+          {% block sidebar_top %}{% endblock %}
           {% include 'MuzichCoreBundle:Layout:side.html.twig' %}
+          {% block sidebar_bottom %}{% endblock %}
         </aside>
           
       </div>
