Evolution #576: Visibilité du score des partages
Score en noir.

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1670,3 +1670,8 @@ div#presubscription input[type="submit"]
   margin-top: 10px;
   margin-right: 1px;
 }
+
+ul.element_thumb_actions li.score
+{
+  color: black;
+}
